--- a/dynamodb-explorer/package.json
+++ b/dynamodb-explorer/package.json
@@ -109,5 +109,6 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./"
-  }
+  },
+  "repository": "https://github.com/sg-designdigitaldata/dynamodb-explorer-extension"
 }
