--- a/.github/workflows/Create Release.yml
+++ b/.github/workflows/Create Release.yml
@@ -44,6 +44,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dynamodb-explorer/${{ steps.get_vsix.outputs.VSIX_FILE }}
-          tag_name: ${{ github.ref_name || "workingonceonly" }}
+          tag_name: ${{ github.ref_name || 'workingonceonly' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
