--- a/dynamodb-explorer/package.json
+++ b/dynamodb-explorer/package.json
@@ -12,7 +12,7 @@
   "activationEvents": [
     "onView:dynamoDbExplorer"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "configuration": {
       "type": "object",
@@ -98,7 +98,10 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/vscode": "^1.80.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.0.0",
+    "ts-loader": "^9.0.0"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.864.0",
@@ -106,7 +109,8 @@
     "@aws-sdk/node-http-handler": "^3.370.0"
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "bundle": "webpack --config webpack.config.js",
+    "vscode:prepublish": "npm run bundle",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./"
   },
