Remove date from tag version

--- a/.github/workflows/Create Release.yml
+++ b/.github/workflows/Create Release.yml
@@ -38,7 +38,7 @@ jobs:
           cd dynamodb-explorer
           echo "VSIX_FILE=$(ls *.vsix | head -n 1)" >> $GITHUB_OUTPUT
           VERSION=$(jq -r .version package.json)
-          echo "TAG_NAME=v$VERSION-$(date +'%Y%m%d')" >> $GITHUB_OUTPUT
+          echo "TAG_NAME=v$VERSION" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
